--- a/public/index.html
+++ b/public/index.html
@@ -28,19 +28,6 @@
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
-
-    <div id="gamestop" data-symbol="GME" class="nicoraynaud-finance-widget" style="width: 250px; margin: auto; margin-top: 20px"></div>
-    <div id="amc" data-symbol="AMC" class="nicoraynaud-finance-widget" style="width: 250px; margin: auto; margin-top: 20px"></div>
-    <div id="amzn" data-symbol="AMZN" class="nicoraynaud-finance-widget" style="width: 250px; margin: auto; margin-top: 20px"></div>
-    <!--
-      This HTML file is a template.
-      If you open it directly in the browser, you will see an empty page.
-
-      You can add webfonts, meta tags, or analytics to this file.
-      The build step will place the bundled scripts into the <body> tag.
-
-      To begin the development, run `npm start` or `yarn start`.
-      To create a production bundle, use `npm run build` or `yarn build`.
-    -->
+    <div id="gamestop" data-widget="FLOATING" data-color="black" data-identifier="5b11ba9aee1d210c9c6f1c58" class="bw-widgets" style="width: 250px; margin: auto; margin-top: 20px"></div>
   </body>
 </html>
