--- a/public/index.html
+++ b/public/index.html
@@ -29,5 +29,6 @@
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="gamestop" data-widget="FLOATING" data-color="black" data-identifier="5b11ba9aee1d210c9c6f1c58" class="bw-widgets" style="width: 250px; margin: auto; margin-top: 20px"></div>
+    <script src="https://web.bewe.co/widget/bewidget.js"></script>
   </body>
 </html>
